--- a/public/partials/dashboard.html
+++ b/public/partials/dashboard.html
@@ -7,8 +7,20 @@
     </md-button>
     <br />
     <md-content class="md-padding" layout-xs="column" layout="row">
-        <div flex-xs flex-gt-xs="50" layout="column">
-            <md-card md-theme="{{ showDarkTheme ? 'dark-grey' : 'default' }}" md-theme-watch>
+        <div flex-xs flex-gt-xs="100" layout="column">
+          <md-card md-theme="default" md-theme-watch>
+            <md-card-title>
+              <md-card-title-text>
+                <span class="md-headline">Tecnologias por Programa</span>
+              </md-card-title-text>
+            </md-card-title>
+            <md-card-content layout="row" layout-align="center">
+                <nvd3 class="bar-chart" options="controller.chartOptions" data="controller.chartData"></nvd3>
+            </md-card-content>
+          </md-card>
+        </div>
+        <div flex-xs flex-gt-xs="100" layout="column">
+            <md-card md-theme="{{ 'default' }}" md-theme-watch>
                 <md-card-title>
                     <md-card-title-text>
                         <span class="md-headline">Ultimas Tecnologias Registradas</span>
@@ -17,7 +29,7 @@
         <md-card-content layout="row" layout-align="space-between">
             <md-list flex>
                 <md-list-item class="md-3-line" ng-repeat="technology in controller.technologies | limitTo:5" ng-click="controller.editTechnology(technology)">
-                    <div class="md-list-item-text" layout="column">
+                    <div style="border-left: solid 2pt #333; padding-left: 3pt;" class="md-list-item-text" layout="column">
                         <h3>{{technology.name}}</h3>
                         <i>por {{technology.createdBy}} el {{technology.createdAt}}</i>
                         <p>{{technology.description}}</p>
@@ -42,18 +54,6 @@
                     </div>
                 </md-list-item>
             </md-list>
-        </md-card-content>
-      </md-card>
-    </div>
-    <div flex-xs flex-gt-xs="50" layout="column">
-      <md-card md-theme="default" md-theme-watch>
-        <md-card-title>
-          <md-card-title-text>
-            <span class="md-headline">Tecnologias por Programa</span>
-          </md-card-title-text>
-        </md-card-title>
-        <md-card-content layout="row" layout-align="center">
-            <nvd3 class="bar-chart" options="controller.chartOptions" data="controller.chartData"></nvd3>
         </md-card-content>
       </md-card>
     </div>
