Home page added, multiple bugs fixed and material fields added

--- a/public/partials/dashboard.html
+++ b/public/partials/dashboard.html
@@ -1,4 +1,4 @@
-<div ng-controller="DashboardController as controller" class="container-fluid" >
+<div ng-controller="DashboardController as controller" class="container-fluid" flex layout-padding>
     <div ng-show="controller.noTechnologies" class="alert alert-info">
         <p>No tiene ninguna tecnologia registrada. Por favor haga click en el boton crear tecnologia para iniciar.</p>
     </div>
