--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,7 @@ body {
     font-family: Roboto, Arial, sans-serif;
     background-color: #FFF;
     color: rgba(0,0,0,0.87);
+    height: auto !important
 }
 
 a {
@@ -15,7 +16,7 @@ a {
 }
 
 .message {
-    max-width: 1050px;
+    /*max-width: 1050px;*/
     margin: 40px auto;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
     border-radius: 2px;
@@ -143,7 +144,7 @@ h4{
     height: auto;
     width: auto;
     max-height: 64px;
-    max-width: 250px;
+    max-width: 230px;
 }
 
 line.nv-force-link{
@@ -159,3 +160,53 @@ md-card.md-default-theme, md-card {
     background-color: rgb(250,250,250);
 }
     
+.ng-hide.ng-hide-animate {
+    display: none !important;
+}
+
+.ng-show.ng-show-animate {
+    display: none !important;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+    background-color:#303030;color:#fff;
+    font-size:13px
+}
+
+.footer a {
+    color:#F9AE40
+}
+
+.appContent {
+    width: 100%;
+    height: 100%; 
+    padding-bottom: 19px
+}
+
+#loaderDiv {
+  background-color: #D51B23;
+  text-align: center;
+  height: 100%;
+  width: 100%
+}
+
+.loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 2000;
+  margin: -75px 0 0 -75px;
+  width: 120px;
+  height: 120px;
+  display: inline-block;
+}
+
+md-checkbox.md-checked .md-icon {
+    background-color: rgba(64, 161, 255, 0.9);
+}
