--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -199,12 +199,14 @@
                     <md-button ng-show="controller.showCreate" class="md-raised md-primary float-right" aria-label="Guardar" ng-click="controller.create()" style="text-align:left">
                          <md-icon md-svg-icon="img/icons/save.svg"></md-icon>Guardar y enviar
                     </md-button>
-                    <!-- <md-button ng-hide="controller.showCreate" class="md-raised md-primary float-right" aria-label="Guardar" ng-click="controller.save()" style="text-align:left" type="submit">
-                        <md-icon md-svg-icon="img/icons/save.svg"></md-icon> Guardar y continuar
-                    </md-button> -->
-                    <md-button ng-hide="controller.showCreate" class="md-raised md-primary float-right" aria-label="Guardar" style="text-align:left" type="submit">
+                    
+                    <md-button ng-hide="controller.showCreate" class="md-raised md-primary float-right" aria-label="Guardar" type="submit"ng-click="$eval(controller.formatObjects[controller.currentNavItem].formName).$valid && controller.save()" style="text-align:left">
                         <md-icon md-svg-icon="img/icons/save.svg"></md-icon> Guardar y continuar
                     </md-button>
+
+                    <!-- <md-button ng-hide="controller.showCreate" class="md-raised md-primary float-right" aria-label="Guardar" style="text-align:left" type="submit">
+                        <md-icon md-svg-icon="img/icons/save.svg"></md-icon> Guardar y continuar
+                    </md-button> -->
                     <md-button ng-show="controller.showRegister" class="md-raised md-primary float-right" aria-label="Guardar" ng-click="controller.register()" style="text-align:left">
                          Registrar
                     </md-button>
