--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -100,8 +100,8 @@
                                                 <input ng-model="answer[question.name]"
                                                    ng-readonly="controller.formatObjects[controller.currentNavItem].readonly"
                                                    ng-require="question.required" 
-                                                   type="email" name="{{question.name}}">
-                                                   <div ng-messages="$eval(questionGroup.name + '.' + question.name + '.$error')">
+                                                   type="email" name="{{question.name + $index}}">
+                                                   <div ng-messages="$eval(controller.formatObjects[controller.currentNavItem].formName + '[\'' + question.name + $index + '\'].$error')">
                                                        <div ng-message="required">Se requiere de este campo para continuar.</div>
                                                    </div>
                                             </md-input-container>
@@ -115,30 +115,54 @@
                                             <md-input-container class="md-block">
                                                 <md-checkbox ng-model="answer[question.name]"
                                                              ng-readonly="controller.formatObjects[controller.currentNavItem].readonly"ng-required="question.required" 
-                                                             type="checkbox" name="{{question.name}}">
+                                                             type="checkbox" name="{{question.name + $index}}">
                                                     Acepto {{question.tag | lowercase}}
                                                 </md-checkbox>
-                                                <div ng-messages="$eval(questionGroup.name + '[\'' + question.name + '\'].$error')" multiple md-auto-hide="false">
+                                                <div ng-messages="$eval(controller.formatObjects[controller.currentNavItem].formName + '[\'' + question.name + $index + '\'].$error')" multiple md-auto-hide="false">
                                                     <div ng-message="required">Se debe aceptar {{question.tag | lowercase}} para continuar.</div>
                                                 </div>
                                             </md-input-container>
                                         </div>
                                         <div ng-switch-when="select">
-                                            <select ng-model="answer[question.name]"
+                                            <!-- <select ng-model="answer[question.name]"
                                                     ng-readonly="controller.formatObjects[controller.currentNavItem].readonly" 
                                                     class="form-control">
                                                 <option ng-repeat="option in question.options" >{{option}}</option>
-                                            </select>
+                                            </select> -->
+                                            <md-input-container class="md-block" flex-gt-sm style="margin-bottom: 30px">
+                                                <label>{{question.tag}}</label>
+                                                <md-select  name="{{question.name + $index}}"
+                                                            ng-model="answer[question.name]"
+                                                            ng-readonly="controller.formatObjects[controller.currentNavItem].readonly"
+                                                            ng-required="question.required">
+                                                    <md-option ng-repeat="option in question.options">
+                                                        {{option}}
+                                                    </md-option>
+                                                </md-select>
+                                                <div ng-messages="$eval(controller.formatObjects[controller.currentNavItem].formName + '[\'' + question.name + $index + '\'].$error')">
+                                                    <div ng-message="required">Se requiere de este campo para continuar.</div>
+                                                </div>
+                                            </md-input-container>
                                         </div>
                                         <div ng-switch-when="date">
-                                            <md-datepicker ng-model="answer[question.name]"
+                                            <!-- <md-datepicker ng-model="answer[question.name]"
                                                            ng-readonly="controller.formatObjects[controller.currentNavItem].readonly" 
-                                                           md-placeholder="Enter date"></md-datepicker>
+                                                           md-placeholder="Enter date">
+                                            </md-datepicker> -->
+                                            <label>{{question.tag}}</label>
+                                            <md-datepicker name="{{question.name + $index}}"
+                                                           ng-model="answer[question.name]"
+                                                           ng-readonly="controller.formatObjects[controller.currentNavItem].readonly" 
+                                                           ng-required="question.required">
+                                            </md-datepicker>
+                                            <div ng-messages="$eval(controller.formatObjects[controller.currentNavItem].formName + '[\'' + question.name + $index + '\'].$error')">
+                                                <div ng-message="required">Se requiere de este campo para continuar.</div>
+                                            </div>
                                         </div>
                                         <div ng-switch-when="reference">
                                             <md-input-container class="md-block" flex-gt-sm style="margin-bottom: 30px">
                                                 <label>{{question.tag}}</label>
-                                                <md-select  name="{{question.name}}"
+                                                <md-select  name="{{question.name + $index}}"
                                                             ng-model="answer[question.name]"
                                                             ng-readonly="controller.formatObjects[controller.currentNavItem].readonly"
                                                             ng-required="question.required">
@@ -146,7 +170,7 @@
                                                         {{pair.key}}
                                                     </md-option>
                                                 </md-select>
-                                                <div ng-messages="$eval(questionGroup.name + '[\'' + question.name + '\'].$error')">
+                                                <div ng-messages="$eval(controller.formatObjects[controller.currentNavItem].formName + '[\'' + question.name + $index + '\'].$error')">
                                                     <div ng-message="required">Se requiere de este campo para continuar.</div>
                                                 </div>
                                             </md-input-container>
@@ -157,14 +181,18 @@
                                             </select> -->
                                         </div>
                                         <div ng-switch-when="long-text">
-                                            <md-input-container class="md-block">
+                                            <md-input-container class="md-block" style="margin-bottom: 30px">
                                               <label>{{question.tag}}</label>
-                                              <textarea ng-model="answer[question.name]" 
+                                              <textarea name="{{question.name + $index}}"
+                                                        ng-model="answer[question.name]" 
                                                         rows="3" 
                                                         md-select-on-focus
                                                         ng-readonly="controller.formatObjects[controller.currentNavItem].readonly"
-                                                        >
+                                                        ng-required="question.required">
                                               </textarea>
+                                              <div ng-messages="$eval(controller.formatObjects[controller.currentNavItem].formName + '[\'' + question.name + $index + '\'].$error')">
+                                                    <div ng-message="required">Se requiere de este campo para continuar.</div>
+                                              </div>
                                             </md-input-container>
                                            <!--  <textarea ng-model="answer[question.name]"
                                                       ng-readonly="controller.formatObjects[controller.currentNavItem].readonly"
@@ -174,20 +202,21 @@
                                             </textarea> -->
                                         </div>
                                         <div ng-switch-when="tags">
-                                            <md-chips ng-model="answer[question.name]" name="question.name" md-removable="true">
+                                            <md-chips ng-model="answer[question.name]" name="{{question.name + $index}}" placeholder="Adiciona {{question.tag | lowercase}}" style="margin-bottom: 30px"
                                             </md-chips>
                                         </div>
                                     </div>
                                 </div>
+                                <!-- Botón quitar -->
                                 <div>
                                     <md-button ng-show="questionGroup.type == 'array' && answerKey != 0" class="md-raised md-primary float-rigth" ng-show="questionGroup.type == 'array'" aria-label="add" ng-click="controller.removeAnswers(questionGroup.name, answerKey)" style="text-align:left">
                                         <md-icon md-svg-icon="img/icons/remove.svg"></md-icon> Quitar {{questionGroup.tag}}
                                     </md-button>
                                 </div>
                             </div>
-                            <!-- <md-divider ng-if="!$last"></md-divider> -->
                         </md-content>
                     </div>
+                    <!-- Botón adicionar -->
                     <div>
                         <md-button class="md-raised md-primary" ng-show="questionGroup.type == 'array'" aria-label="add" ng-click="controller.addAnswers(questionGroup.name)" style="text-align:left margin-top:10px">
                             <md-icon md-svg-icon="img/icons/add.svg"></md-icon> Adicionar {{questionGroup.tag}}
@@ -196,18 +225,13 @@
                 </div>
                 <!-- Botones -->
                 <div style="text-align: center">
-                    <md-button ng-show="controller.showCreate" class="md-raised md-primary float-right" aria-label="Guardar" ng-click="controller.create()" style="text-align:left">
+                    <md-button ng-show="controller.showCreate" class="md-raised md-primary float-right" aria-label="Guardar" type="submit" ng-click="$eval(controller.formatObjects[controller.currentNavItem].formName).$valid && controller.create()" style="text-align:left">
                          <md-icon md-svg-icon="img/icons/save.svg"></md-icon>Guardar y enviar
                     </md-button>
-                    
                     <md-button ng-hide="controller.showCreate" class="md-raised md-primary float-right" aria-label="Guardar" type="submit"ng-click="$eval(controller.formatObjects[controller.currentNavItem].formName).$valid && controller.save()" style="text-align:left">
                         <md-icon md-svg-icon="img/icons/save.svg"></md-icon> Guardar y continuar
                     </md-button>
-
-                    <!-- <md-button ng-hide="controller.showCreate" class="md-raised md-primary float-right" aria-label="Guardar" style="text-align:left" type="submit">
-                        <md-icon md-svg-icon="img/icons/save.svg"></md-icon> Guardar y continuar
-                    </md-button> -->
-                    <md-button ng-show="controller.showRegister" class="md-raised md-primary float-right" aria-label="Guardar" ng-click="controller.register()" style="text-align:left">
+                    <md-button ng-show="controller.showRegister" class="md-raised md-primary float-right" aria-label="Guardar" type="submit" ng-click="$eval(controller.formatObjects[controller.currentNavItem].formName).$valid && controller.register()" style="text-align:left">
                          Registrar
                     </md-button>
                 </div>
