Minor changes added

--- a/public/partials/roles.html
+++ b/public/partials/roles.html
@@ -3,7 +3,7 @@
     <br/>
     <md-input-container class="md-block">
       <label>Roles JSON</label>
-      <textarea ng-model="controller.definition" md-maxlength="1000" rows="20" md-select-on-focus></textarea>
+      <textarea ng-model="controller.definition" rows="20" md-select-on-focus></textarea>
     </md-input-container>
     <md-button class="md-raised md-primary pull-right" aria-label="Guardar" ng-click="controller.save()" style="text-align:left">
         <md-icon md-svg-icon="img/icons/save.svg"></md-icon> Guardar
