--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -284,13 +284,13 @@
                 <!-- Botones -->
                 <div style="text-align: center">
                     <md-button ng-show="controller.showCreate" class="md-raised md-primary float-right" aria-label="Guardar" type="submit" ng-click="$eval(controller.formatObjects[controller.currentNavItem].formName).$valid && controller.create()" style="text-align:left">
-                         <md-icon md-svg-icon="img/icons/save.svg"></md-icon>Guardar y enviar
-                    </md-button>
-                    <md-button ng-hide="controller.showCreate" class="md-raised md-primary float-right" aria-label="Guardar" type="submit"ng-click="$eval(controller.formatObjects[controller.currentNavItem].formName).$valid && controller.save()" style="text-align:left">
-                        <md-icon md-svg-icon="img/icons/save.svg"></md-icon> Guardar y continuar
+                         <md-icon md-svg-icon="img/icons/save.svg"></md-icon>Guardar y continuar
                     </md-button>
                     <md-button ng-show="controller.showRegister" class="md-raised md-primary float-right" aria-label="Guardar" type="submit" ng-click="$eval(controller.formatObjects[controller.currentNavItem].formName).$valid && controller.register()" style="text-align:left">
-                         Registrar
+                        Registrar esta tecnología
+                    </md-button>
+                    <md-button ng-hide="controller.showCreate" class="md-raised md-primary float-right" aria-label="Guardar" type="submit"ng-click="controller.save()" style="text-align:left">
+                        <md-icon md-svg-icon="img/icons/save.svg"></md-icon> Guardar cambios
                     </md-button>
                 </div>
             </form>
