--- a/public/partials/dashboard.html
+++ b/public/partials/dashboard.html
@@ -1,10 +1,10 @@
 <div ng-controller="DashboardController as controller" class="container-fluid" flex layout-padding>
-    <div ng-show="controller.noTechnologies" class="alert alert-info">
+    <!-- <div ng-show="controller.noTechnologies" class="alert alert-info">
         <p>No tiene ninguna tecnologia registrada. Por favor haga click en el boton crear tecnologia para iniciar.</p>
     </div>
     <div ng-hide="infoMessage != ''" class="alert alert-info">
         <p>{{infoMessage}}</p>
-    </div>
+    </div> -->
     <md-button class="md-raised md-primary" aria-label="Crear tecnologia" ng-click="controller.newTechnology()" style="text-align:left">
         <md-icon md-svg-icon="img/icons/add.svg"></md-icon> Crear tecnologia
     </md-button>
@@ -67,4 +67,13 @@
             </md-card>
         </div>
   </md-content>
+
+<!-- No technologies message notification template -->
+  <script type="text/ng-template" id="custom_template.html">
+      <div class="ui-notification custom-template" style="width:80%; text-align: center;">
+          <div class="message" ng-bind-html="message"></div>
+      </div>
+  </script>
+
 </div>
+
